--- a/demo/server/makefile
+++ b/demo/server/makefile
@@ -10,6 +10,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 			  $(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 			  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
 			  $(BASE_DIR)/event_loop.o\
+			  $(BASE_DIR)/daemon.o\
 			  $(CS_DIR)/server.o\
 			  $(CS_DIR)/client.o\
 			  server_demo.o
