1)Adding: Add flow restriction for pretecting server to provide stable serving

--- a/demo/conf/cs.conf
+++ b/demo/conf/cs.conf
@@ -4,14 +4,19 @@
 #   for example: 0xa (hex); 15 (decimal)
 #
 # daemon flag: { 0 => no daemon; 1 => daemon }
-daemon      = 1
+daemon          = 1
 
 # log setting
 # path using time format: { %Y => year; %m => month; %d => day; %H => hour }
 # log level: { 0 => debug; 1 => trace; 2 => info; 3 => warning, 4 => error; 5 => fatal_error }
-log_path    = ../log/cs_log.%Y-%m-%d-%H
-log_level   = 0
-
+log_path        = ../log/cs_log.%Y-%m-%d-%H
+log_level       = 0
 
 # server port
-port        = 9090
+port            = 9090
+
+# work threads number
+threads_num     = 15
+
+# flow restricts for protecting server to provide stable serving  
+flow_restrict   = 200
