--- a/base/makefile
+++ b/base/makefile
@@ -4,7 +4,7 @@
 CCUTIL_DIR 	= ..
 BASE_DIR 	= $(CCUTIL_DIR)/base
 CC 		= g++
-CFLAGS 	= -g -c -Wall -fPIC -D_CONFIG_MAIN_TEST_ -I$(CCUTIL_DIR)
+CFLAGS 	= -g -c -Wall -fPIC -D_LOAD_CTRL_MAIN_TEST_ -I$(CCUTIL_DIR)
 OBJS 	= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 		  $(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 		  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
