$1)Adding: Add statistic for connection

--- a/demo/conf/cs.conf
+++ b/demo/conf/cs.conf
@@ -19,4 +19,11 @@ port            = 9090
 threads_num     = 15
 
 # flow restricts for protecting server to provide stable serving  
-flow_restrict   = 200
+flow_restrict   = 100
+
+
+# statistic info
+stat_path       = ../log/csutil_stat
+stat_file_size  = 67108864
+# circle time that dump statistic info to file, second as unit
+stat_dump_circle= 60
