--- a/demo/server/makefile
+++ b/demo/server/makefile
@@ -1,6 +1,11 @@
 #test
 
 #PARAM
+PLATFORM	= $(shell uname -s)
+ifeq ($(PLATFORM), Linux)
+	LIB 	= -lrt -ldl
+endif
+
 CCUTIL_DIR 	= ../..
 BASE_DIR 	= $(CCUTIL_DIR)/base
 CS_DIR 		= $(CCUTIL_DIR)/cs
@@ -12,6 +17,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
 			  $(BASE_DIR)/daemon.o $(BASE_DIR)/config.o\
 			  $(BASE_DIR)/event_loop.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
+			  $(BASE_DIR)/statistic.o\
 			  $(CS_DIR)/server.o $(CS_DIR)/client.o\
 			  server_demo.o
 
@@ -21,7 +27,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
 all : server clean
 
 server : $(OBJS)
-	$(CC) -o $@ $^ -lpthread
+	$(CC) -o $@ $^ $(LIB) -lpthread
 
 clean : 
 	rm -fr $(OBJS)
