--- a/base/makefile
+++ b/base/makefile
@@ -1,17 +1,23 @@
 #test
 
 #PARAM
+PLATFORM	= $(shell uname -s)
+ifeq ($(PLATFORM), Linux)
+	LIB 	= -lrt -ldl
+endif
+
 CCUTIL_DIR 	= ..
 BASE_DIR 	= $(CCUTIL_DIR)/base
-CC 		= g++
-CFLAGS 	= -g -c -Wall -fPIC -D_LOAD_CTRL_MAIN_TEST_ -I$(CCUTIL_DIR)
-OBJS 	= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
-		  $(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
-		  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
-		  $(BASE_DIR)/event_loop.o $(BASE_DIR)/hash.o \
-		  $(BASE_DIR)/cpu.o $(BASE_DIR)/daemon.o\
-		  $(BASE_DIR)/search.o $(BASE_DIR)/util.o\
-		  $(BASE_DIR)/config.o
+CC 			= g++
+CFLAGS 		= -g -c -Wall -fPIC -D_DYNAMIC_LIB_MAIN_TEST_ -I$(CCUTIL_DIR)
+OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
+			$(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
+			$(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
+			$(BASE_DIR)/event_loop.o $(BASE_DIR)/hash.o \
+			$(BASE_DIR)/cpu.o $(BASE_DIR)/daemon.o\
+			$(BASE_DIR)/search.o $(BASE_DIR)/util.o\
+			$(BASE_DIR)/dynamic_lib.o\
+			$(BASE_DIR)/config.o $(BASE_DIR)/statistic.o
 
 #.PHONY
 .PHONY : all build clean
@@ -19,7 +25,7 @@ OBJS 	= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 all : build clean
 
 build : $(OBJS)
-	$(CC) -o $@ $^
+	$(CC) -o $@ $^ $(LIB)
 
 clean : 
 	rm -fr $(OBJS)
