1)Adding: add epoll

--- a/base/makefile
+++ b/base/makefile
@@ -11,6 +11,7 @@ CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC -D_DYNAMIC_LIB_MAIN_TEST_ -I$(CCUTIL_DIR)
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 			$(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
+			$(BASE_DIR)/event_epoll.o\
 			$(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
 			$(BASE_DIR)/event_loop.o $(BASE_DIR)/hash.o \
 			$(BASE_DIR)/cpu.o $(BASE_DIR)/daemon.o\
