--- a/demo/server/makefile
+++ b/demo/server/makefile
@@ -15,6 +15,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
 			  $(BASE_DIR)/daemon.o $(BASE_DIR)/config.o\
 			  $(BASE_DIR)/event_loop.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
+			  $(BASE_DIR)/event_epoll.o\
 			  $(BASE_DIR)/statistic.o\
 			  $(CS_DIR)/server.o $(CS_DIR)/client.o\
 			  server_demo.o
