--- a/demo/client/makefile
+++ b/demo/client/makefile
@@ -11,13 +11,15 @@ CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC  -I$(CCUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 			  $(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
-			  $(BASE_DIR)/event_epoll.o\
 			  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
 			  $(BASE_DIR)/event_loop.o $(BASE_DIR)/config.o\
 			  $(BASE_DIR)/util.o $(BASE_DIR)/statistic.o\
 			  $(CS_DIR)/server.o\
 			  $(CS_DIR)/client.o\
 			  client_demo.o
+ifeq ($(PLATFORM), Linux)
+OBJS 		+= $(BASE_DIR)/event_epoll.o
+endif
 
 #.PHONY
 .PHONY : all client clean
