1)Adding: create log dir if it doesn't exist

--- a/demo/conf/cs.conf
+++ b/demo/conf/cs.conf
@@ -9,7 +9,8 @@ daemon          = 1
 # log setting
 # path using time format: { %Y => year; %m => month; %d => day; %H => hour }
 # log level: { 0 => debug; 1 => trace; 2 => info; 3 => warning, 4 => error; 5 => fatal_error }
-log_path        = ../log/cs_log.%Y-%m-%d-%H
+log_dir         = ../log
+log_file_name   = cs_log.%Y-%m-%d-%H
 log_level       = 0
 
 # server port
