--- a/base/makefile
+++ b/base/makefile
@@ -8,14 +8,14 @@ include $(CCUTIL_DIR)/makefile.header
 
 BASE_DIR 	= $(CCUTIL_DIR)/base
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_CONFIG_MAIN_TEST_ -I$(CCUTIL_DIR)
+CFLAGS 		= -g -c -Wall -fPIC -D_FILE_UTIL_MAIN_TEST_ -I$(CCUTIL_DIR)
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 			$(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 			$(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
 			$(BASE_DIR)/event_loop.o $(BASE_DIR)/hash.o \
 			$(BASE_DIR)/cpu.o $(BASE_DIR)/daemon.o\
 			$(BASE_DIR)/search.o $(BASE_DIR)/util.o\
-			$(BASE_DIR)/dynamic_lib.o\
+			$(BASE_DIR)/dynamic_lib.o $(BASE_DIR)/file_util.o\
 			$(BASE_DIR)/config.o $(BASE_DIR)/statistic.o
 ifeq ($(PLATFORM), Linux)
 OBJS		+= $(BASE_DIR)/event_epoll.o
