--- a/base/makefile
+++ b/base/makefile
@@ -7,7 +7,7 @@ include $(CCUTIL_DIR)/makefile.header
 
 BASE_DIR 	= $(CCUTIL_DIR)/base
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_HASH_MAIN_TEST_ -I$(CCUTIL_DIR) -pthread
+CFLAGS 		= -g -c -Wall -fPIC -D_SEARCH_MAIN_TEST_ -I$(CCUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 		  	$(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 		  	$(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
@@ -15,6 +15,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 			$(BASE_DIR)/statistic.o $(BASE_DIR)/util.o\
 			$(BASE_DIR)/curl_http.o $(BASE_DIR)/reg.o\
 			$(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o\
+			$(BASE_DIR)/search.o\
 			$(BASE_DIR)/int.o
 LIB 		+= -lcurl
 
