1)Adding: just print diff time

--- a/test_base/test/makefile
+++ b/test_base/test/makefile
@@ -11,7 +11,8 @@ TEST_BASE_DIR 	= $(CCUTIL_DIR)/test_base
 CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CCUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
-			  test_base.o test_controller.o
+			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
+			  my_test.o
 
 #.PHONY
 .PHONY : all test clean
