1)Adding: get post num if chars are all numbers

--- a/test/src/makefile
+++ b/test/src/makefile
@@ -11,11 +11,12 @@ TEST_BASE_DIR 	= $(CCUTIL_DIR)/test_base
 CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CCUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o\
-			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o\
+			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
 			  unit_test_statistic_data.o\
 			  unit_test_algo.o\
-			  unit_test_int.o
+			  unit_test_int.o\
+			  unit_test_util.o
 
 #.PHONY
 .PHONY : all test clean
