1)Adding: unit test for simple regular expression

--- a/test/src/makefile
+++ b/test/src/makefile
@@ -14,6 +14,7 @@ CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o $(BASE_DIR)/time.o\
+			  $(BASE_DIR)/simple_reg.o $(BASE_DIR)/reg.o\
 			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
 			  $(STORE_DIR)/cache/lru_cache/src/lru_cache.o\
 			  $(STORE_DIR)/db/hash_db/src/hash_db.o\
@@ -24,7 +25,9 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  unit_test_int.o\
 			  unit_test_util.o\
 			  unit_test_time.o\
-			  unit_test_file_util.o
+			  unit_test_file_util.o\
+			  unit_test_reg.o\
+			  unit_test_simple_reg.o
 
 #.PHONY
 .PHONY : all test clean
