1)Adding: test for rsa cipher

--- a/test/src/makefile
+++ b/test/src/makefile
@@ -9,12 +9,15 @@ BASE_DIR 	= $(CSUTIL_DIR)/base
 STRATEGY_DIR= $(CSUTIL_DIR)/strategy
 STORE_DIR 	= $(CSUTIL_DIR)/store
 TEST_BASE_DIR 	= $(CSUTIL_DIR)/test_base
+OPENSSL_DIR 	= /usr/local/openssl
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -pthread
+CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -pthread
+LIB 		+= -lcrypto
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o $(BASE_DIR)/time.o\
-			  $(BASE_DIR)/simple_reg.o $(BASE_DIR)/reg.o\
+			  $(BASE_DIR)/simple_reg.o $(BASE_DIR)/reg.o $(BASE_DIR)/random.o\
+			  $(BASE_DIR)/cipher.o $(BASE_DIR)/rsa_cipher.o\
 			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
 			  $(STORE_DIR)/cache/lru_cache/src/lru_cache.o\
 			  $(STORE_DIR)/db/hash_db/src/hash_db.o\
@@ -27,7 +30,9 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  unit_test_time.o\
 			  unit_test_file_util.o\
 			  unit_test_reg.o\
-			  unit_test_simple_reg.o
+			  unit_test_rsa_cipher.o\
+			  unit_test_simple_reg.o\
+			  unit_test_random.o
 
 #.PHONY
 .PHONY : all test clean
