--- a/test/src/makefile
+++ b/test/src/makefile
@@ -11,13 +11,13 @@ STORE_DIR 	= $(CSUTIL_DIR)/store
 TEST_BASE_DIR 	= $(CSUTIL_DIR)/test_base
 OPENSSL_DIR 	= /usr/local/openssl
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -pthread
+CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -pthread -D_XOPEN_SOURCE
 LIB 		+= -lcrypto
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o $(BASE_DIR)/time.o\
 			  $(BASE_DIR)/simple_reg.o $(BASE_DIR)/reg.o $(BASE_DIR)/random.o\
-			  $(BASE_DIR)/cipher.o $(BASE_DIR)/rsa_cipher.o\
+			  $(BASE_DIR)/cipher.o $(BASE_DIR)/rsa_cipher.o $(BASE_DIR)/coroutine.o\
 			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
 			  $(STORE_DIR)/cache/lru_cache/src/lru_cache.o\
 			  $(STORE_DIR)/db/hash_db/src/hash_db.o\
@@ -32,6 +32,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  unit_test_reg.o\
 			  unit_test_rsa_cipher.o\
 			  unit_test_simple_reg.o\
+			  unit_test_coroutine.o\
 			  unit_test_random.o
 
 #.PHONY
