1)Adding: add hash process for datas

--- a/data_process/src/makefile
+++ b/data_process/src/makefile
@@ -10,6 +10,7 @@ CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC -D_DATA_PROCESS_MAIN_TEST_  -I$(CSUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
 			  $(BASE_DIR)/ip.o $(BASE_DIR)/random.o\
+			  $(BASE_DIR)/int.o\
 			  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o\
 			  $(BASE_DIR)/daemon.o $(BASE_DIR)/config.o\
 			  $(BASE_DIR)/event_loop.o $(BASE_DIR)/util.o $(BASE_DIR)/hash.o\
