--- a/tools/src/makefile
+++ b/tools/src/makefile
@@ -6,15 +6,18 @@ CSUTIL_DIR 	= ../..
 include $(CSUTIL_DIR)/makefile.header
 
 BASE_DIR 	= $(CSUTIL_DIR)/base
+DATA_PROCESS_DIR = $(CSUTIL_DIR)/data_process
 CC 			= g++
 CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -pthread
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/time.o\
+			  $(BASE_DIR)/int.o\
 			  $(BASE_DIR)/ip.o $(BASE_DIR)/random.o\
 			  $(BASE_DIR)/coding.o $(BASE_DIR)/msg.o\
 			  $(BASE_DIR)/daemon.o $(BASE_DIR)/config.o\
 			  $(BASE_DIR)/event_loop.o $(BASE_DIR)/util.o $(BASE_DIR)/hash.o\
 			  $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 			  $(BASE_DIR)/statistic.o $(BASE_DIR)/file_util.o\
+			  $(DATA_PROCESS_DIR)/src/data_process.o\
 			  log_check.o file_content_replace.o tools.o
 ifeq ($(PLATFORM), Linux)
 OBJS 		+= $(BASE_DIR)/event_epoll.o
