--- a/base/makefile
+++ b/base/makefile
@@ -7,7 +7,7 @@ include $(CCUTIL_DIR)/makefile.header
 
 BASE_DIR 	= $(CCUTIL_DIR)/base
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_IP_MAIN_TEST_ -D_ENABLE_SYSLOG_ -I$(CCUTIL_DIR) -pthread -D_XOPEN_SOURCE
+CFLAGS 		= -g -c -Wall -fPIC -D_CURL_HTTP_MAIN_TEST_ -D_ENABLE_SYSLOG_ -I$(CCUTIL_DIR) -pthread -D_XOPEN_SOURCE
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/random.o $(BASE_DIR)/ip.o\
 		  	$(BASE_DIR)/time.o $(BASE_DIR)/load_ctrl.o $(BASE_DIR)/event_poll.o\
 		  	$(BASE_DIR)/coding.o $(BASE_DIR)/msg.o \
