1)Modifying: strictly checking when encoding

--- a/test/src/makefile
+++ b/test/src/makefile
@@ -9,11 +9,13 @@ BASE_DIR 	= $(CSUTIL_DIR)/base
 STRATEGY_DIR= $(CSUTIL_DIR)/strategy
 STORE_DIR 	= $(CSUTIL_DIR)/store
 HTTP_DIR 	= $(CSUTIL_DIR)/http
+SOCK_DIR 	= $(CSUTIL_DIR)/sock
 TEST_BASE_DIR 	= $(CSUTIL_DIR)/test_base
 OPENSSL_DIR 	= /usr/local/openssl
+CURL_DIR 		= /usr/local/curl
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -pthread -D_XOPEN_SOURCE
-LIB 		+= -lcrypto
+CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -I$(CURL_DIR)/include -pthread -D_XOPEN_SOURCE
+LIB 		+= $(CURL_DIR)/lib/libcurl.a $(OPENSSL_DIR)/lib/libssl.a $(OPENSSL_DIR)/lib/libcrypto.a -lidn -lz -ldl
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o $(BASE_DIR)/time.o\
@@ -23,12 +25,14 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/trie.o $(BASE_DIR)/bit_arr.o $(BASE_DIR)/search.o\
 			  $(BASE_DIR)/sort.o $(BASE_DIR)/skip_list.o $(BASE_DIR)/aes_cipher.o\
 			  $(BASE_DIR)/distance.o $(BASE_DIR)/md5.o $(BASE_DIR)/message_digest.o\
+			  $(BASE_DIR)/mutable_buffer.o\
+			  $(BASE_DIR)/curl_http.o\
 			  $(HTTP_DIR)/http_proto.o\
 			  $(TEST_BASE_DIR)/src/test_base.o $(TEST_BASE_DIR)/src/test_controller.o\
 			  $(STORE_DIR)/cache/lru_cache/src/lru_cache.o\
 			  $(STORE_DIR)/db/hash_db/src/hash_db.o\
 			  $(STORE_DIR)/db/bit_cask/src/bit_cask_db.o\
-			  unit_test_aes_cipher.o
+			  unit_test_coding.o
 #			  unit_test_statistic_data.o\
 #			  unit_test_algo.o\
 #			  unit_test_lru_cache.o\
@@ -50,7 +54,11 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 #			  unit_test_coding.o\
 #			  unit_test_skip_list.o\
 #			  unit_test_aes_cipher.o\
-			  unit_test_distance.o
+#			  unit_test_smart_ptr.o\
+#			  unit_test_distance.o\
+#			  unit_test_curl_http.o\
+#			  unit_test_mutable_buffer.o\
+#			  unit_test_topn_heap.o
 
 #.PHONY
 .PHONY : all test clean
@@ -58,7 +66,7 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 all : test clean
 
 test : $(OBJS)
-	$(CC) -o $@ $^ $(LIB) -lpthread
+	$(CC) -v -o $@ $^ $(LIB) -lpthread
 
 clean : 
 	rm -fr $(OBJS)
