1)Adding: test for operation on big number 2)Adding: test for translating on proto

--- a/test/src/makefile
+++ b/test/src/makefile
@@ -10,12 +10,19 @@ STRATEGY_DIR= $(CSUTIL_DIR)/strategy
 STORE_DIR 	= $(CSUTIL_DIR)/store
 HTTP_DIR 	= $(CSUTIL_DIR)/http
 SOCK_DIR 	= $(CSUTIL_DIR)/sock
+PROTO_DIR 	= $(CSUTIL_DIR)/proto
 TEST_BASE_DIR 	= $(CSUTIL_DIR)/test_base
+RAPID_JSON_DIR  = $(CSUTIL_DIR)/third_party/rapidjson-master-20190827
+PROTOBUF_DIR  = /usr/local/protobuf
 OPENSSL_DIR 	= /usr/local/openssl
 CURL_DIR 		= /usr/local/curl
+PB_SRC 			= ./pb_src
+PB_PATH 		= ../protobuf
 CC 			= g++
-CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include -I$(CURL_DIR)/include -pthread -D_XOPEN_SOURCE
-LIB 		+= $(CURL_DIR)/lib/libcurl.a $(OPENSSL_DIR)/lib/libssl.a $(OPENSSL_DIR)/lib/libcrypto.a -lidn -lz -ldl
+CFLAGS 		= -g -c -Wall -fPIC -D_TOOLS_MAIN_TEST_  -I$(CSUTIL_DIR) -I$(OPENSSL_DIR)/include\
+			  -I$(CURL_DIR)/include -I$(RAPID_JSON_DIR)/include -I$(PROTOBUF_DIR)/include -I. -pthread -D_XOPEN_SOURCE
+LIB 		+= $(CURL_DIR)/lib/libcurl.a $(OPENSSL_DIR)/lib/libssl.a $(OPENSSL_DIR)/lib/libcrypto.a $(PROTOBUF_DIR)/lib/libprotobuf.a -lidn -lz -ldl
+PB_OBJS 	= $(PB_SRC)/model.pb.o
 OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(BASE_DIR)/algo.o $(BASE_DIR)/int.o $(BASE_DIR)/util.o\
 			  $(BASE_DIR)/file_util.o $(BASE_DIR)/hash.o $(BASE_DIR)/time.o\
@@ -34,50 +41,59 @@ OBJS 		= $(BASE_DIR)/log.o $(BASE_DIR)/statistic_data.o $(BASE_DIR)/coding.o\
 			  $(STORE_DIR)/cache/lru_cache/src/lru_cache.o\
 			  $(STORE_DIR)/db/hash_db/src/hash_db.o\
 			  $(STORE_DIR)/db/bit_cask/src/bit_cask_db.o\
-			  unit_test_http_client.o
+			  $(PROTO_DIR)/pb_to_json.o\
+			  unit_test_int.o
 #			  unit_test_statistic_data.o\
-#			  unit_test_algo.o\
-#			  unit_test_lru_cache.o\
-#			  unit_test_hash_db.o\
-#			  unit_test_int.o\
-#			  unit_test_util.o\
-#			  unit_test_time.o\
-#			  unit_test_file_util.o\
-#			  unit_test_reg.o\
-#			  unit_test_rsa_cipher.o\
-#			  unit_test_simple_reg.o\
-#			  unit_test_coroutine.o\
-#			  unit_test_random.o\
-#			  unit_test_consistent_hash.o\
-#			  unit_test_bloom_filter.o\
-#			  unit_test_trie.o\
-#			  unit_test_bit_arr.o\
-#			  unit_test_sort.o\
-#			  unit_test_coding.o\
-#			  unit_test_skip_list.o\
-#			  unit_test_aes_cipher.o\
-#			  unit_test_smart_ptr.o\
-#			  unit_test_distance.o\
-#			  unit_test_curl_http.o\
-#			  unit_test_mutable_buffer.o\
-#			  unit_test_topn_heap.o\
-#			  unit_test_http_client.o
+			  unit_test_algo.o\
+			  unit_test_lru_cache.o\
+			  unit_test_hash_db.o\
+			  unit_test_int.o\
+			  unit_test_util.o\
+			  unit_test_time.o\
+			  unit_test_file_util.o\
+			  unit_test_reg.o\
+			  unit_test_rsa_cipher.o\
+			  unit_test_simple_reg.o\
+			  unit_test_coroutine.o\
+			  unit_test_random.o\
+			  unit_test_consistent_hash.o\
+			  unit_test_bloom_filter.o\
+			  unit_test_trie.o\
+			  unit_test_bit_arr.o\
+			  unit_test_sort.o\
+			  unit_test_coding.o\
+			  unit_test_skip_list.o\
+			  unit_test_aes_cipher.o\
+			  unit_test_smart_ptr.o\
+			  unit_test_distance.o\
+			  unit_test_curl_http.o\
+			  unit_test_mutable_buffer.o\
+			  unit_test_topn_heap.o\
+			  unit_test_http_client.o\
+			  unit_test_proto.o
 
 ifeq ($(PLATFORM), Linux)
 OBJS            += $(BASE_DIR)/event_epoll.o
 endif
 
 #.PHONY
-.PHONY : all test clean
+.PHONY : create_pb all test clean
 
-all : test clean
+all : create_pb test clean
 
-test : $(OBJS)
+create_pb:
+	mkdir -p $(PB_SRC)
+	export LD_LIBRARY_PATH=${PROTOBUF_DIR}/lib; $(PROTOBUF_DIR)/bin/protoc --cpp_out=$(PB_SRC) --proto_path=$(PB_PATH) $(PB_PATH)/*.proto
+
+test : $(OBJS) $(PB_OBJS)
 	$(CC) -v -o $@ $^ $(LIB) -lpthread
 
 clean : 
-	rm -fr $(OBJS)
+	rm -fr $(OBJS) $(PB_OBJS)
 
 #OBJS
 $(OBJS) : %.o : %.cc
+	$(CC) $(CFLAGS) -o $@ $<
+
+$(PB_OBJS) : %.o : %.cc
 	$(CC) $(CFLAGS) -o $@ $<
